--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.20",
+    "base64-string": "^1.1.2",
     "expo": "~49.0.15",
     "expo-image-picker": "~14.3.2",
     "expo-status-bar": "~1.6.0",
     "expo-updates": "~0.18.17",
     "firebase": "^10.6.0",
+    "firebase-functions": "^4.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
