--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/stack": "^6.3.20",
     "base64-string": "^1.1.2",
     "expo": "~49.0.15",
+    "expo-file-system": "~15.4.5",
     "expo-image-manipulator": "~11.3.0",
     "expo-image-picker": "~14.3.2",
     "expo-status-bar": "~1.6.0",
@@ -31,8 +32,8 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
-    "react-native-web": "~0.19.6",
-    "expo-file-system": "~15.4.5"
+    "react-native-vector-icons": "^10.0.2",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
